<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_24dp"
                android:src="@drawable/title"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                style="@style/TextInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/logo"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@id/logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                style="@style/TextInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/logo"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@id/name_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                style="@style/TextInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/logo"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@id/email_input_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                style="@style/TextInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/logo"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@id/password_input_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sign_up_button"
                style="@style/StandardButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_24dp"
                android:text="@string/sign_up_button_text"
                app:layout_constraintEnd_toEndOf="@+id/confirm_password_input_layout"
                app:layout_constraintStart_toStartOf="@+id/confirm_password_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_input_layout" />

            <TextView
                android:id="@+id/go_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_login"
                style="@style/LinkText"
                app:layout_constraintTop_toBottomOf="@id/sign_up_button"
                android:layout_marginTop="@dimen/common_24dp"
                app:layout_constraintStart_toStartOf="@id/sign_up_button"
                app:layout_constraintEnd_toEndOf="@id/sign_up_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        layout="@layout/progress_bar"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>