<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".user_account.user_profile.UserProfileActivity">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="@dimen/profile_image_size"
                android:layout_height="@dimen/profile_image_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/common_16dp"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input_layout"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_16dp"
                android:layout_marginEnd="@dimen/common_16dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_picture">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_input_layout"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/name_input_layout"
                app:layout_constraintStart_toStartOf="@+id/name_input_layout"
                app:layout_constraintTop_toBottomOf="@id/name_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_input"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_input"
                    android:inputType="textEmailAddress" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/name_input_layout"
                app:layout_constraintStart_toStartOf="@+id/name_input_layout"
                app:layout_constraintTop_toBottomOf="@id/phone_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/apply_changes"
                style="@style/StandardButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/apply_changes"
                android:layout_marginTop="@dimen/common_32dp"
                app:layout_constraintEnd_toEndOf="@+id/name_input_layout"
                app:layout_constraintStart_toStartOf="@+id/name_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/email_input_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        layout="@layout/progress_bar"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>